traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while(isFinalPosition()) {
                       ^Snake:13: error: value west is not a member of object plm.universe.Direction
    if (getDirection() == Direction.west) {
                                    ^Snake:22: warning: enclosing method isFinalPosition has result type Unit: return value discarded
  return finalPosition;
  ^Snake:30: error: value west is not a member of object plm.universe.Direction
      case Direction.west => right(); forward(); right();
                     ^Snake:31: error: value east is not a member of object plm.universe.Direction
      case Direction.east => left(); forward(); left();
                     ^